--- a/app/src/componentLibrary/attributeList/editableAttribute/attribute/attribute.scss
+++ b/app/src/componentLibrary/attributeList/editableAttribute/attribute/attribute.scss
@@ -18,8 +18,6 @@
   display: inline-flex;
   align-items: center;
   min-height: 28px;
-  margin-bottom: 16px;
-  margin-right: 16px;
   padding: 4px 8px;
   background-color: $bgColor;
   border-radius: 6px;
